# src/main/resources/swagger.yaml
@@ -24,18 +24,53 @@ paths:
       produces:
         - "application/json"
       parameters:
-        - name: "currentPage"
+        - name: currentPage
           in: "query"
           description: "Current Page"
           required: true
           type: "integer"
           format: "int64"
-        - name: "pageSize"
+        - name: pageSize
           in: "query"
           description: "Page Size"
           required: true
           type: "integer"
           format: "int64"
+        - name: lists
+          in: header
+          required: false
+          type: string
+          description: "Name(s) of the List(s) the author of the Post belongs"
+        - name: networks
+          in: header
+          required: false
+          type: string
+          description: "Name(s) of the Social Network(s) of the Post"
+        - name: text
+          in: header
+          required: false
+          type: string
+          description: "Text to be searched on the content of the Post"
+        - name: userlogin
+          in: header
+          required: false
+          type: string
+          description: "Login of the Author of the Post on The Social Netowork the post was made"
+        - name: fullname
+          in: header
+          required: false
+          type: string
+          description: "Full name of the Author of the Post"
+        - name: startDate
+          in: header
+          required: false
+          type: string
+          description: "Start Date for the Created Date search. Format: dd/MM/yyyy"
+        - name: endDate
+          in: header
+          required: false
+          type: string
+          description: "End Date for the Created Date search. Format: dd/MM/yyyy"
       responses:
         '200':
           description: "Posts data suscessfully retrieved"
@@ -51,34 +86,6 @@ paths:
           description: "No Posts found"
 
 definitions:
-  MachineRequest:
-    type: object
-    required:
-      - name
-      - machine_is_up
-      - admin_user
-      - ip_address
-    properties:
-      id:
-        type: integer
-        format: int64
-        description: Id of the Machine
-      name:
-        type: string
-        description: Name of the Machine
-        minLength: 1
-      ip_address:
-        type: string
-        description: Ip Address of the Machine
-        minLength: 1
-      machine_is_up:
-        type: boolean
-        description: Flag indicating if the machine is running
-      admin_user:
-        type: string
-        description: Login of the Admin User of the Machine
-        minLength: 1
-
   PostResponse:
     type: object
     properties:
@@ -100,88 +107,3 @@ definitions:
       lists_belongs_to:
         type: string
         description: Names of the Lists the Author of the Post Belongs
-
-  MachineDetailResponse:
-    type: object
-    properties:
-      id:
-        type: integer
-        format: int64
-        description: Id of the Machine
-      name:
-        type: string
-        description: Name of the Machine
-        minLength: 1
-      machine_is_up:
-        type: boolean
-        description: Flag indicating if the machine is running
-      ip_address:
-        type: string
-        description: Ip Address of the Machine
-        minLength: 1
-      last_downtime:
-        type: string
-        description: Last timestamp that this machine was down
-      admin_user:
-        type: string
-        description: Login of the Admin User of the Machine
-        minLength: 1
-      users_acess:
-        type: array
-        description: List of login of users that have acess to this machine
-        items:
-          type: string
-        uniqueItems: true
-      machine_events_log:
-        type: array
-        description: List of up and downtime events of this machine
-        items:
-          $ref: '#/definitions/MachineEventLogResponse'
-
-  MachineEventLogResponse:
-    type: object
-    required:
-      - type
-      - time_stamp
-    properties:
-      type:
-        type: string
-        description: Type of event
-        minLength: 1
-      time_stamp:
-        type: string
-        description: Timestamp of the event
-        minLength: 1
-
-  UserTemplate:
-    type: object
-    required:
-      - login
-      - name
-    properties:
-      login:
-        type: string
-        description: Name of the Machine
-        minLength: 1
-      name:
-        type: string
-        description: Name of the Machine
-        minLength: 1
-      user_is_admin:
-        type: boolean
-        description: Flag indicating if the User is an Admin User
-
-  UserAcessRequest:
-    type: object
-    required:
-      - login
-      - name
-    properties:
-      user_login:
-        type: string
-        description: Login of the user requesting acess
-        minLength: 1
-      machine_id:
-        type: integer
-        format: int64
-        description: Id of the machine the user is requesting acess to
